# scripts

./: .gitignore  README.md  aid.groovy  artifactory-publish.groovy  basic.groovy  basic.py  bb-enable-webhook.py  bb-enable-webhook.sh  bb-get-branches.sh  bb-get-clone-urls.py  bb-get-clone-urls.sh  bb-get-projects.sh  bb-get-tags.sh  bb-has-branch.sh  bb-has-tag.sh  bb_api.py  bb_create_repo.py  bb_delete_repo.py  bb_enable_webhook.py  bb_fork_repo.py  bb_get_branches.py  bb_get_clone_urls.py  bb_get_projects.py  bb_get_tags.py  bb_has_branch.py  bb_has_tag.py  bb_set_default_branch.py  bb_utils.py  bitbucket-create-clone-script.groovy  bitbucket-create-repo.groovy  bitbucket-open-url.sh  bitbucket-set-default-branch.groovy  distribute.sh  get_artifact_id.py  git-command-all.sh  git-commit-and-push.sh  git-open-remote.sh  jenkins.groovy  maven_multi_module_project.py  mmp  (+15 more)
.github/workflows/: build.yml  ci.yml
groovy/: jenkins.groovy  rsr.groovy
py/: artifactory_api.py  artifactory_delete.py  artifactory_publish.py  artifactory_utils.py  basic.py  bb_api.py  bb_clone_projects.py  bb_clone_repos.json  bb_clone_repos.py  bb_create_from_template.py  bb_create_repo.py  bb_delete_repo.py  bb_delete_repos.py  bb_enable_webhook.py  bb_enable_webhooks.py  bb_fork_repo.py  bb_fork_repos.py  bb_fork_repos_git.py  bb_get_branches.py  bb_get_clone_urls.py  bb_get_clone_urls_grep.py  bb_get_default_branch.py  bb_get_default_branches.py  bb_get_projects.py  bb_get_repos.py  bb_get_tags.py  bb_has_branch.py  bb_has_tag.py  bb_open_remote.py  bb_set_default_branch.py  bb_set_default_branches.py  bb_utils.py  command_all.py  get_artifact_id.py  git_command_all.py  maven_get_artifact_id.py  maven_multi_module_project.py  maven_pom.py  maven_project.py  maven_reactor_summary.py  (+13 more)
py/test/: test_artifactory_publish.py  test_artifactory_utils.py
rb/: pnr.rb
sh/: bb-get-clone-urls-grep.sh  git-command-all.sh  jb.sh
vang/: TODO.md  clone_config_and_create_mmp.py
vang/artifactory/: api.py  delete.py  diff_repos.py  download_repo_content.py  list_repo_content.py  list_repos.py  mirror.py  mirror_config.py  publish.py  utils.py
vang/artifactory/tests/: test_api.py  test_delete.py  test_list_repo_content.py  test_publish.py  test_utils.py
vang/azdo/: clone_repos.py  create_build_definition.py  create_repo.py  get_project.py  list_builds.py  list_projects.py  list_repos.py  queue_build.py  util.py
vang/azdo/tests/: test_clone_repos.py  test_create_build_definition.py  test_create_repo.py  test_get_project.py  test_list_builds.py  test_list_projects.py  test_list_repos.py  test_queue_build.py
vang/bitbucket/: api.py  clone_repos.json  clone_repos.py  clone_repos_with_commits_since.py  create_from_template.py  create_repo.py  delete_repos.py  enable_webhooks.py  fork_repos.py  fork_repos_git.py  get_branches.py  get_clone_urls.py  get_clone_urls_grep.py  get_commits.py  get_default_branches.py  get_projects.py  get_repos.py  get_tags.py  has_branch.py  has_tag.py  open_remote.py  set_default_branches.py  set_post_webhooks.py  set_webhooks.py  utils.py  validate_projects.py
vang/bitbucket/tests/: test_api.py  test_clone_repos.py  test_create_from_template.py  test_create_repo.py  test_delete_repos.py  test_enable_webhooks.py  test_fork_repos.py  test_fork_repos_git.py  test_get_branches.py  test_get_clone_urls.py  test_get_clone_urls_grep.py  test_get_commits.py  test_get_default_branches.py  test_get_projects.py  test_get_repos.py  test_get_tags.py  test_has_branch.py  test_has_tag.py  test_open_remote.py  test_set_default_branches.py  test_utils.py
vang/core/: core.py
vang/core/tests/: test_core.py
vang/git/: filter_branch.py  open_remote.py  patch_tag.py  patchish_refs.py
vang/git/tests/: test_filter_branch.py  test_open_remote.py
vang/github/: example.py
vang/jenkins/: api.py  clone_job.py  copy_job.py  copy_jobs.py  copy_jobs_config.py  copy_jobs_example.py  delete_builds.py  delete_jobs.py  download_configs.py  get_jobs.py  trigger_builds.py  upload_configs.py  view.py
vang/jenkins/tests/: test_api.py  test_delete_jobs.py  test_get_jobs.py  test_trigger_builds.py
vang/maven/: get_artifact_id.py  get_dependants.py  get_dependencies.py  list_repo.py  multi_module_project.py  pom.py  project.py  reactor_summary.py  regroup.py  remote_from_local.py  switch_settings.py
vang/maven/tests/: test_get_artifact_id.py  test_get_dependants.py  test_get_dependencies.py  test_list_repo.py  test_multi_module_project.py  test_pom.py  test_project.py  test_reactor_summary.py  test_switch_settings.py
vang/misc/: basic.py  bitbucket_jenkins_synchronize.py  create_symlinks.py  ext_local.plist  ext_local.py  mac_ip.py  play.py  pw_generator.py  s.py  util.py  version.py  wc.py  weekday.py
vang/misc/tests/: test_basic.py  test_create_symlinks.py  test_ext_local.py  test_mac_ip.py  test_s.py  test_util.py  test_wc.py  test_weekday.py
vang/nexus3/: api.py  download_latest_snapshot.py  get_assets.py  get_components.py  get_repositories.py  publish.py  upload.py  utils.py
vang/nexus3/tests/: test_api.py  test_publish.py  test_upload.py  test_utils.py
vang/pio/: command_all.py  download.py  pzip.json  pzip.py  replace_in_zip.py  rsr.py  shasum-diff-dirs.py  shasum_diff_dirs.py  shell.py  synchronize_dirs.py  zip_read.py
vang/pio/tests/: test_command_all.py  test_rsr.py  test_shell.py  test_synchronize_dirs.py  test_zip_read.py
vang/tfs/: api.py  build_definition_template.json  clone_repos.py  create_build_definition.py  create_from_template.py  create_release_definition.py  create_repo.py  definition_utils.py  delete_build_definitions.py  delete_repo.py  get_branches.py  get_build_definitions.py  get_projects.py  get_release_definitions.py  get_repos.py  list_build_definitions.py  list_release_definitions.py  queue_build_definitions.py  release_definition_template.json  update_build_definition.py  update_release_definition.py
vang/tfs/tests/: test_api.py  test_clone_repos.py  test_create_from_template.py  test_create_repo.py  (+4 more)
vang/wildcat/: wildcat_war_release_info.py
