[project]
name = "vang"
version = "1.3.1"
authors = [
  { name="Magnus Bjuvensjö", email="bjuvensjo@gmail.com" },
]
description = "Scripts"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords=["python", "script", "artifactory", "azdo", "bitbucket", "git", "github", "jenkins", "maven", "nexus3", "tfs"]
dependencies = [
    "more-itertools",
    "requests",
]
[project.optional-dependencies]
dev = [
    "pytest"
]

[project.urls]
"Homepage" = "https://github.com/bjuvensjo/scripts"
"Bug Tracker" = "https://github.com/bjuvensjo/scripts/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
